--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="#" class="lista-menu__link">Design & UX</a>
                 </li>
             </ul>
-            <img src="img/Logo.svg" alt="Logo da AluraBooks">
+            <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
             <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
         <div class="container">
